--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,7 +1,14 @@
+
+/*html {
+    min-height: 100%;
+    position: relative;
+}
+
+
 body {
     background-color: white;
 }
-
+*/
 
 
 /*JQuery Sortable Plugin*/
@@ -17,6 +24,10 @@ body {
   font-style: normal;
 }
 
+
+#download{
+     text-align: center;
+}
 
 
 .ui-sortable {
@@ -80,3 +91,4 @@ body {
     text-shadow: 0px 0px 0px rgba(0,0,0,0);
     cursor: move;
 }
+
