--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -10,6 +10,24 @@ body {
 }
 */
 
+html {
+  position: relative;
+  min-height: 100%;
+}
+body {
+  /* Margin bottom by footer height */
+  margin-bottom: 60px;
+}
+.footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  /* Set the fixed height of the footer here */
+  height: 60px;
+  background-color: black;
+}
+
+
 
 /*JQuery Sortable Plugin*/
 
