--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -36,14 +36,13 @@ body {
   background-color: black;
 }*/
 
-.footer
-{
-    height: 50px;
-    background-color: black;
+.footer{
+
     position: absolute;
-    left: 0;
-    right: 0;
+    bottom: 0;
     width: 100%;
+    height: 60px;
+    background-color: #222222;
 }
 
 
