--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -10,14 +10,46 @@ body {
 }
 */
 
-html {
+* {
+    margin: 0;
+}
+
+
+
+html, body {
+  height: 100%;
+}
+
+.wrapper {
+  min-height: 100%;
+  height: auto !important;
+  height: 100%;
+  margin: 0 auto -4em;
+}
+
+
+/*html, body {
+    height: 100%;
+}*/
+/*.wrapper {
+    min-height: 100%;
+    height: auto !important;
+    height: 100%;
+    margin: 0 auto -155px; /* the bottom margin is the negative value of the footer's height */
+/*/*}
+.push {
+    height: 155px;  .push must be the same height as .footer 
+}
+
+/*html {
   position: relative;
   min-height: 100%;
 }
 body {
-  /* Margin bottom by footer height */
+   Margin bottom by footer height 
   margin-bottom: 60px;
-}
+   height: 100%;
+}*/
 
 .navbar-brand,
 .navbar-nav li a {
@@ -38,11 +70,12 @@ body {
 
 .footer{
 
-    position: relative;
+    /*position: relative;
     bottom: 0;
     width: 100%;
-    height: 60px;
+    height: 60px;*/
     background-color: #222222;
+    height: 155px;
 }
 
 
