--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,14 +1,5 @@
 
-/*html {
-    min-height: 100%;
-    position: relative;
-}
 
-
-body {
-    background-color: white;
-}
-*/
 
 * {
     margin: 0;
@@ -32,54 +23,26 @@ html, body {
  height:80px;
 }
 
-/*html, body {
-    height: 100%;
-}*/
-/*.wrapper {
-    min-height: 100%;
-    height: auto !important;
-    height: 100%;
-    margin: 0 auto -155px; /* the bottom margin is the negative value of the footer's height */
-/*/*}
-.push {
-    height: 155px;  .push must be the same height as .footer 
-}
 
-/*html {
-  position: relative;
-  min-height: 100%;
-}
-body {
-   Margin bottom by footer height 
-  margin-bottom: 60px;
-   height: 100%;
-}*/
 
 .navbar-brand,
 .navbar-nav li a {
+     font-size: 20px;
     line-height: 80px;
     height: 80px;
     padding-top: 0;
 }
 
+ol li{
+  margin-bottom: 10px;
+}
 
-/*.footer {
-  position: relative;
-  bottom: 0;
-  width: 100%;
-   Set the fixed height of the footer here 
-  height: 60px;
-  background-color: black;
-}*/
 
 .footer{
 
-    /*position: relative;
-    bottom: 0;
-    width: 100%;
-    height: 60px;*/
+   
     background-color: #222222;
-    height: 155px;
+    height: 105px;
 }
 
 
@@ -106,7 +69,7 @@ body {
   text-align: center;
 }
 #contact {
-     padding-top: 50px;
+     padding-top: 25px;
 }
 
 #instructions{
