--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,14 +1,22 @@
 
-
-
-* {
-    margin: 0;
+html {
+  position: relative;
+  min-height: 100%;
 }
 
+body {
+  /* Margin bottom by footer height */
+  margin-bottom: 100px;
+/*  min-height: 100%;*/
+}
 
-
-html, body {
-  height: 100%;
+.footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  /* Set the fixed height of the footer here */
+  height: 100px;
+  background-color: #222222;
 }
 
 .wrapper {
@@ -27,7 +35,7 @@ html, body {
 
 .navbar-brand,
 .navbar-nav li a {
-     font-size: 20px;
+     font-size: 16px;
     line-height: 80px;
     height: 80px;
     padding-top: 0;
@@ -38,12 +46,7 @@ ol li{
 }
 
 
-.footer{
 
-   
-    background-color: #222222;
-    height: 105px;
-}
 
 
 
@@ -104,6 +107,14 @@ border-radius: 10%;
     height: 50px;
     border-radius: 10%;
     margin-right: 10px;                   
+ }
+
+ .socialNav{
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    margin-right: 10px;    
+
  }
 
 
