--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -10,6 +10,15 @@ body {
 /*  min-height: 100%;*/
 }
 
+button{
+  font-family: "Helvetica";
+
+}
+
+form{
+  text-align: center;
+}
+
 .footer {
   position: absolute;
   bottom: 0;
@@ -18,6 +27,8 @@ body {
   height: 100px;
   background-color: #222222;
 }
+
+
 
 .wrapper {
   min-height: 100%;
